--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,20 @@
 /* Base Styles */
 :root {
     --primary: #6c5ce7;
+    --primary-light: #afa4ff;
     --primary-dark: #5649c0;
-    --secondary: #00cec9;
+    --secondary: #383838;
     --dark: #2d3436;
     --light: #f5f6fa;
     --danger: #d63031;
-    --success: #00b894;
+    --success: #15ff00;
     --warning: #fdcb6e;
     --info: #0984e3;
     --glass: rgba(255, 255, 255, 0.1);
     --glass-border: rgba(255, 255, 255, 0.2);
+}
+.purple-letter {
+    color: #6c5ce7; /* Your purple color */
 }
 
 * {
@@ -260,7 +264,7 @@ pre code.language-lua {
 }
 
 .nav-link:hover {
-    color: var(--secondary);
+    color: var(--primary-light);
 }
 
 .nav-link.active {
